--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "json-loader": "^0.5.7",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "query-string": "^6.9.0",
     "react-redux": "^7.1.3",
+    "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "redux": "^4.0.5",
