--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "@testing-library/user-event": "^7.2.1",
     "antd": "^3.26.7",
     "json-loader": "^0.5.7",
+    "query-string": "^6.10.1",
     "react": "^16.12.0",
+    "react-credit-cards": "^0.8.0",
     "react-dom": "^16.12.0",
-    "query-string": "^6.9.0",
     "react-redux": "^7.1.3",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
