--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "json-loader": "^0.5.7",
     "query-string": "^6.10.1",
     "react": "^16.12.0",
+    "react-credit-cards": "^0.8.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
     "react-router": "^5.1.2",
